# ddlKiller-rs

./: README.md
cli_main/: Cargo.toml
cli_main/src/: handler.rs  lib.rs  main.rs  parser.rs
cli_main/src/cmd/: list.rs  new.rs  over.rs  show.rs
cli_main/src/utils/: colorize.rs  tablelize.rs  wordwrap.rs
ddl_core/: Cargo.toml
ddl_core/src/: entry.rs  errors.rs  fs.rs  interface.rs  item.rs  lib.rs  logger.rs
ddl_core/tests/: entry_file_tests.rs  item_file_tests.rs
gui_main/: Cargo.toml
