[package]
name = "cli_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddl_core = { path = "../ddl_core" }
termcolor = "1.2.0"
terminal_size = "0.2.6"
time = { version = "0.3.25", features = ["serde", "local-offset", "macros"] }
