[package]
name = "ddl_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
serde = { version = "1.0.177", features = ["derive"] }
serde_repr = "0.1.16"
time = { version = "0.3.25", features = ["serde", "local-offset", "macros", "parsing"] }
toml = "0.7.6"
